# lpm-fidelity

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/lpm_fidelity/: counting.py  distances.py  optimal_transport_distance.py  two_sample_testing.py
tests/: test_counting.py  test_distances.py  test_distances_performance.py  test_optimal_transport_distance.py  test_ordinal_df.py  test_two_sample_testing.py
