[project]
name = "lpm-fidelity"
version = "0.0.1"
description = "Assessing fidelity of synthetic data"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ulli Schaechtle", email = "ulli@mit.edu" },
    { name = "Tim Burress", email = "tim-burress@garage.co.jp" },
    { name = "eve n.u.", email = "eve@saferdata.io" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "scipy>=1.14.1,<2",
    "polars>=1.7.1,<2",
    "pot>=0.9.4,<1",
    "jax>=0.5.3",
    "jaxlib>=0.5.3",
    "equinox>=0.13.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jaxtyping>=0.3.3",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.8",
]

[project.urls]
Repository = "https://github.com/SaferData/lpm-fidelity"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lpm_fidelity"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
addopts = "--ignore=tests/test_distances_performance.py"
